Added my to-do react project

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,126 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.to-do-body {
+  background-color: #4f000b;
   min-height: 100vh;
+}
+
+.header {
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  text-align: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-top: 10px;
+  color: #ff9b54;
+  font-weight: bold;
+  font-size: 400%;
+  font-family: "Lobster", cursive;
+}
+.header:hover {
+  text-shadow: 1px 1px 3px lightsalmon;
 }
 
-.App-link {
-  color: #61dafb;
+.tasks-container {
+  background-color: #ce4257;
+  border-radius: 25px;
+  margin: 50px;
+  padding: 30px;
+  min-height: 70vh;
+}
+/* full form of to-do-list */
+.list-group {
+  padding: 10px;
+  /* border: 1px solid #ffdac6; */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* top portion of tasks container  */
+.form-group {
+  text-align: center;
+  min-height: 10vh;
+  font-size: large;
+  color: #ffdac6;
+  font-family: 'Gill Sans';
+  /* font-weight: bold; */
+  font-size: xx-large;
+  padding: 10px;
+  border: 1px solid #ffdac6;
+  border-radius: 25px;
+  margin-bottom: 10px;
 }
+
+.to-do-label{
+  display: block;
+  /* border: 2px solid red; */
+  /* border-style: solid; */
+}
+
+/* input value where you insert task */
+.form-control.form-control {
+  display: inline-block;
+  font-family: 'Gill Sans';
+  font-size: x-large;
+  width: 70%;
+}
+
+.form-control.form-control:focus {
+  border-color: #ff9b54;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 3px 8px rgba(255, 146, 100, 0.626);
+}
+
+/* submit button */
+.btn.btn-secondary {
+  display: inline-block;
+  margin: 10px;
+  font-family: 'Gill Sans';
+  background-color: #ff9b54;
+  border-color: #ff9b54; 
+}
+
+.btn.btn-secondary:hover {
+  background: #ffdac6;
+  color: #ff9b54;
+  border-color: #ff9b54;
+}
+
+.list-group-item.list-group-item {
+  /* margin-left: 30px; */
+  /* width: 90%; */
+  padding: 3px 10px;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  border: 1px solid #4f000b;
+  border-radius: 5px;
+  /* border: 5px solid orange; */
+ font-family: 'Gill Sans';
+  font-size: x-large;
+  color: #4f000b;
+}
+
+.list-group-item.list-group-item.odd {
+  background-color: #ff9b54;
+}
+
+.list-group-item.list-group-item.even {
+  background-color: #cc5567;
+}
+
+/* delete button */
+.delete.btn.btn-secondary {
+  background-color: #720026;
+  border-color: #4f000b;
+  color:papayawhip;
+  float: right;
+}
+
+.footer {
+  min-height: 5vh;
+  color: #ffdac6;
+  text-align: center;
+  padding: 10px;
+  border: 1px solid #ffdac6;
+  border-radius: 5px;
+  margin: 30px
+}
+
+/*# sourceMappingURL=app.css.map */
+
+/*# sourceMappingURL=App.css.map */
