--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,9 @@
 .list-group-item.list-group-item {
   /* margin-left: 30px; */
   /* width: 90%; */
+  height: 50px;
+  align-items: center;
+  display: flex;
   padding: 3px 10px;
   margin-top: 2px;
   margin-bottom: 2px;
@@ -111,7 +114,9 @@
 
 /* delete button */
 .delete.btn.btn-secondary {
-  display: inline-block;
+  display: inline-flex;
+  position: absolute;
+  right: 0px;
   background-color: #720026;
   border-color: #4f000b;
   color:papayawhip;
@@ -120,7 +125,9 @@
 
 /* edit button */
 .edit.btn.btn-secondary {
-  display: inline-block;
+  display: inline-flex;
+  position: absolute;
+  right: 64px;
   background-color: #720026;
   border-color: #4f000b;
   color:papayawhip;
